syntax = "proto3";

package ampb;

import "shpb/anime_resource.proto";
import "ampb/anime_movie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message CreateAnimeMovieResourceRequest {
    int64 animeID = 1;
    shpb.AnimeResourceRequest animeResources = 2;
}

message CreateAnimeMovieResourceResponse {
    AnimeMovieResponse animeMovie = 1;
    shpb.AnimeResourceResponse animeResources = 2;
}